# proj-vit

./: .gitignore  README.md
dataset_preparation/: dataset_preparation.md  france_ndsm_generation.py  generate_tiles.py  generate_tiles_italy.py  italy_processing.ipynb  ndsm_generation.py  swiss_ndsm_generation.py  swiss_scratch_matching.py  swisstopo_download_from_csv.py
docker-images/mmseg_ub22.04-cuda12-cudnn8-py3.9-pytorch/: Dockerfile  README.md  pyproject.toml
docker-images/scalemae_ub22.04-cuda12-cudnn8-py3.9-pytroch/: Dockerfile  README.md
scale-mae/mae/: main_pretrain.py
scale-mae/mae/config/: fmow.yaml  pretrain.yaml
scale-mae/mae/util/: misc.py
scripts/: france_ndsm_generation.py  generate_tiles.py  generate_tiles_italy.py  italy_processing.ipynb  swiss_ndsm_generation.py  swiss_scratch_matching.py
